# TP_final_2_1S_2026

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  crossref_service.py  docker-compose.yml  pdf_parser.py  pubchem_service.py  pyproject.toml  requirements.txt  uniprot_service.py
articles/: README.md  dois_casos_prueba.md
data/: e2e_corpus.json
docs/: architechure.md  architecture.md
outputs/: tp_bioinfo_presentacion.pptx
outputs/examples/: README.md  doi_descarga_frontiers.json  doi_fallback_crossref.json  pdf_afinidad_multi_insecticide.json  pdf_agrotoxicos_atrazine.json  pdf_blast_local_in_11_342.json  pdf_obp_csp_aphis.json
scripts/: cli_example.py  docker_tp.ps1  run_app_and_tests.ps1  run_e2e_eval.py  setup_blast_local.ps1
src/: app.py  pdf_parser.py
src/models/: __init__.py  article.py  base.py  candidatos_articulo.py  compound.py  homologo.py  protein.py  resultado_articulo.py
src/services/: __init__.py  blast_service.py  candidatos_articulo.py  crossref_service.py  pubchem_service.py  uniprot_service.py
src/utils/: __init__.py  pdf_parser.py
tests/: conftest.py  test_app.py  test_blast_local.py  test_candidatos_articulo.py  test_packaging.py  test_pdf_parser.py  test_services.py  test_smoke.py
tests/models/: test_article.py  test_base.py  test_candidatos_articulo_model.py  test_compound.py  test_homologo.py  test_protein.py  test_resultado_articulo.py
tests/services/: test_blast_service.py  test_candidatos_articulo.py  test_crossref_service.py  test_pubchem_service.py  test_uniprot_service.py
tests/utils/: test_pdf_parser.py
(+1 files in other folders)
