[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tp-bioinfo"
version = "0.1.0"
description = "Trabajo practico de bioinformatica con CLI, Crossref y parsing de PDFs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.84",
    "click>=8.1",
    "loguru",
    "pandas",
    "pdfplumber",
    "PyPDF2",
    "requests",
    "tabula-py",
]

[project.scripts]
tp-bioinfo = "app:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
py-modules = ["app", "crossref_service", "pdf_parser", "pubchem_service", "uniprot_service"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
